app/assets/stylesheets/team_memberships.scss
@import "variables";

.team-edit {
  table {
    border-collapse: separate;
    border-spacing: 0 0.375rem;
    margin-bottom: 0.625rem;
    padding: 0 $form-page-gutter;
    width: 100%;

    tr {
      text-align: left;

      &:not(:first-child) {
        box-shadow: 0px 1px 2px rgba(0,32,69,0.18);
      }
    }

    th {
      color: $dark-bluegray;
      font-size: 0.688rem;
      line-height: 0.875rem;

      &:first-of-type {
        padding-left: 1.25rem;
      }
    }

    .team-membership {
      background-color: $light-light-blue;

      td {
        border-bottom: 1px solid $gray;
        border-top: 1px solid $gray;
        color: $navy-blue;
        font-size: 0.75rem;
        font-weight: $normal;
        line-height: 1.25rem;
        padding-bottom: 0.625rem;
        padding-top: 0.625rem;

        &:first-of-type {
          border-bottom-left-radius: 0.313rem;
          border-left: 1px solid $gray;
          border-top-left-radius: 0.313rem;
          max-width: 150px;
          padding-left: 1.25rem;
        }

        &:last-of-type {
          border-bottom-right-radius: 0.313rem;
          border-right: 1px solid $gray;
          border-top-right-radius: 0.313rem;
        }

        a {
          color: $dark-bluegray;

          &:visited {
            color: $navy-blue;
          }
        }

        img {
          border-radius: 0.125rem;
          color: $white;
          height: 1rem;
          vertical-align: middle;
          width: 1rem;

          &[src*="check-light"] {
            background-color: $navy-blue;
            height: 0.875rem;
            width: 0.875rem;
          }
        }
      }
    }
  }
}

